index.css
html{
    font-size: 10px;
	scroll-behavior: smooth;
}







::-moz-selection { /* Code for Firefox */
	
	background: rgba(131, 51, 155, 0.548);
  }
  
  ::selection {
	
	background-color: #3333334d;
  }

body {
    margin: 0;
    padding: 0;
    background-color: white;
	font-family: 'Montserrat', sans-serif;
}

/*----------NAVBAR & ANIMATION----------*/
header {
	opacity: 1;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	align-items: center;
	padding: 0rem 10rem;
	/*font-variant: small-caps;*/
	z-index: 1;
	background-attachment: fixed;
	position: sticky;
	top: 0;
	background-color: white;
}

#header-title {
	font-size: 2.5rem;
	font-weight: 600;
}

#header-title a{
	text-decoration: none;
	color: black;
}

nav ul {
	list-style: none;
	display: flex;
	flex-wrap: wrap;
}

nav li {
	text-transform: uppercase;
    font-size: 1.6rem;
	font-weight: 600;
}

nav a:hover{
	color: blueviolet;
	
    transition: 0.5s;
}

nav a {
	color: black;
	text-decoration: none;
    margin: 2.2rem 1.5rem;
    transition: 0.3s;
}
/*----------NAVBAR & ANIMATION----------*/

/*----------ABOUT ME----------*/
.about-me{
	margin-left: 15rem;
	margin-right: 15rem;
}

.about-me-grid {
	display: flex;
	flex-direction: row;
	flex-direction: row-reverse!important;
	text-align: left;
	font-size: 2.3rem;
	/*background-color: #e9e9e9;*/
	align-items: center;
	gap: 6.5rem;
	height: 85vh;
}

.about-me-titles h1{
	font-size: 10rem;
	letter-spacing: 15px;
	margin: 0;
	font-weight: 600;
}

.about-me-titles h2{
	font-size: 4rem;
	letter-spacing: 8px;
	margin: 0;
	font-weight: 500;
}

.about-me-description{
	margin: 0;
}

#about-me-grid1{
	width: 60%;
}
/*----------ABOUT ME----------*/

.home-image {
	width: 100%;
	border-radius: 50%;
}

/*
.skills{
	font-size: 2.3rem;
	margin: 15rem 0 0;
}

.skills-grid{
	display: grid;
	grid-template-columns: 25% 25% 25% 25%;
	width: 100rem;
	margin: auto;
	padding: 5rem;
	align-items: center;
	text-align: center;
}

.skills-grid div{
	box-shadow: 0px 1px 15px #333;
	border-radius: 10px;
	margin: 1rem;
}

.skills-grid div img:hover{
	transform: scale(0.9);
	transition: 0.5s;
}

.skills-grid div img{
	margin: 4rem 5rem;
	transition: 0.5s;
}
*/
/*----------Card1-buttons----------*/

.cv-button {
	font-family: 'Montserrat', sans-serif;
	font-weight: 700;
	background-color: transparent;
	background-repeat: no-repeat;
	border: none;
	text-align: center;
	white-space: nowrap;
	font-weight: 600;
}


.cv-button a:hover {
	background-color: #333;
	box-shadow: 0px 1px 15px #333;
	color: #fff;
}

.cv-button a {
	padding: 1.3em 3em;
	font-size: 12px;
	text-transform: uppercase;
	letter-spacing: 2.5px;
	color: #000;
	background-color: rgba(0, 0, 0, 0.164);
	border: none;
	border-radius: 45px;
	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
	transition: all 0.3s ease 0s;
	cursor: pointer;
	outline: none;
	text-decoration: none;
}



.buttons{
	display: flex;
	margin-bottom: 5rem;
}


.button-grid {
	display: flex;
	margin: auto;
	text-align: center;
	justify-content: center;
	
	align-items: center;
}

.button-grid div{
	margin: 0 1rem;
}

.button-grid > div {
	width: auto;
}

.button-grid > div > div > img{
	width: 5rem;
	height: auto;
	transition: 0.5s;
}

#about-me-grid2{
	text-align: center;
}

#about-me-grid2 img{
	width: 70%;
}

.buttons div div img:hover{
	transform: scale(1.2);
	transition: 0.5s;
}

.contact-buttons{
	display: grid;
	grid-template-columns: auto auto auto;
	margin: auto;
	width: 50%;
	text-align: center;
	margin-bottom: 2.5rem;
}

.contact-information .contact-buttons {
	margin: 0;
	text-align: left;
	width: 35%;
}


.tooltip-contact img {
	width: 7rem;
}

.tooltip, .tooltip-contact {
	position: relative;
	display: inline-block;
}

.tooltip .tooltiptext {
	visibility: hidden;
	width: 80px;
	background-color: rgba(0, 0, 0, 0.164);
	color: black;
	text-align: center;
	border-radius: 4px;
	padding: 5px 0;
	position: absolute;
	z-index: 1;
	bottom: 120%;
	left: 50%;
	margin-left: -40px;
	opacity: 0;
	transition: opacity 0.5s;
	font-size: 1.3rem;
	white-space: nowrap;
}

.tooltip-contact .tooltiptext {
	visibility: hidden;
	width: 120px;
	background-color: rgba(0, 0, 0, 0.164);
	color: black;
	text-align: center;
	border-radius: 4px;
	padding: 5px 0;
	position: absolute;
	z-index: 1;
	bottom: 94%;
	left: 50%;
	margin-left: -60px;
	opacity: 0;
	transition: opacity 0.5s;
	font-size: 1.3rem;
	white-space: nowrap;
}

.tooltip:hover .tooltiptext {
	visibility: visible;
	opacity: 1;
	transition: opacity 0.6s;
}

.tooltip-contact:hover .tooltiptext{
	visibility: visible;
	opacity: 1;
	transition: opacity 0.6s;
}

/*----------Card1-buttons----------*/

/*----------PROJECTS----------*/

.projects{
	padding-top: 5rem;
}

.project-container > div{
	display: flex;
	flex-direction: row;
	font-size: 2.3rem;
	margin: 10rem 15rem;
	text-align: center;
	align-items: center;
	border-radius: 10px;
	box-shadow: 1px 1px 10px 10px rgba(0, 0, 0, 0.1);
	min-height: 60rem;
}

.reverse{
	
	flex-direction: row-reverse!important;
	
}

.project-container > div > div >p{
	color: #767676;
	font-weight: 500;
	font-size: 1.8rem;
	padding: 0rem 2.5rem;
}

.project-container > div > div >img{
	/*width: 110rem;*/
	max-width: 96%;
	height: auto;
	margin: 2rem 2rem 2rem 2rem;
	border-radius: 15px;
}

.project-text{
	width: 70%;
	margin: 2rem 2rem 2rem 2rem;
}

.tags{
	display: flex;
	gap: 2rem;
	justify-content: center;
}

.tags > p{
	box-shadow: 0 0 10px rgba(0,0,0,.1);
	padding: 1rem;
	font-size: 1.5rem;
	font-weight: bold;
	-webkit-user-select: none; /* Safari */
	-ms-user-select: none; /* IE 10 and IE 11 */
	user-select: none; /* Standard syntax */
}

.project-links{
	justify-content: center;
	display: flex;
	gap: 5rem;
	font-size: 1.8rem;
	font-weight: 600;
}

.project-links div a{
	display: flex;
	gap: 0.5rem;
	transition: 0.2s;
	text-decoration: none;
	color: black;
	transition: 0.3s;
}

.project-links > div > a > svg{
	width: 25px;
	fill: black;
	transition: 0.3s;
}

.project-links  div:hover  a  svg{
	width: 25px;
	fill: blueviolet;
	transition: 0.3s;
}

.project-links  div:hover  a{
	color: blueviolet;
	transition: 0.3s;
}





/*----------PROJECTS----------*/


/*----------CONTACT----------*/
.contáctame{
	background-color: #e9e9e9;
	padding-top: 4rem;
	padding-bottom: 4rem;
	font-family: 'Montserrat', sans-serif;
	font-size: 1.8rem;
	
}

.skills-title, .contact-title{
	background-color: #f5f5f5;
	text-align: center;
	padding-top: 2.5rem;
	padding-bottom: 2.5rem;
	font-size: 4rem;
	color: black;
	letter-spacing: 4px;
	font-weight: 600;
	padding-left: 4px;
}
.contact-grid {
	display: grid;
	grid-template-columns: 50% 50%;
	align-items: center;
	height: 75vh;
	padding-left: 20rem;
}

.contact-information h2 {
	font-size: 7.5rem;
	margin: 0;
	font-weight: 600;
}
.contact-information h3{
	font-size: 3.5rem;
	font-weight: 600;
}

.contact-information p img{
	width: 2.2rem;
}

form {
	max-width: 50rem;
}


input[type="text"],
input[type="email"],
textarea {
	display: block;
	width: 100%;
	padding: 1rem 1rem;
	margin-bottom: 2rem;
	margin-top: 0.5rem;
	font-size: 1.6rem;
	border-radius: 4px;
	border: 1px solid #ccc;
	font-family: 'Montserrat', sans-serif;
	resize: none;
}

textarea {
	padding-bottom: 10rem;

}

button[type="submit"] {
	display: block;
	background-color: #333;
	color: #fff;
	font-size: 1.6rem;
	padding: 1rem 1.5rem;
	border-radius: 4px;
	border: none;
	cursor: pointer;
	font-family: 'Montserrat', sans-serif;
}

button[type="submit"]:hover {
	background-color: #555;
}

input[type="text"]:focus,
input[type="email"]:focus,
textarea:focus {
	outline: none;
	border-color: #333;
}


/*----------CONTACT----------*/

/*----------FOOTER----------*/
footer {
	color: black;
	/* color de texto del footer */
	padding: 15px;
	/* espacio de relleno interno del footer */
	font-size: 1.4rem;
	/* tamaño de fuente del footer */
	text-align: center;
	/* alineación del contenido del footer */
	left: 0;
	/* distancia desde el borde izquierdo de la pantalla */
	bottom: 0;
	/* distancia desde el borde inferior de la pantalla */
	font-family: 'Montserrat', sans-serif;
}

/*----------FOOTER----------*/

@media screen and (max-width: 1600px) {
	html{
		font-size: 8px;
	}
  }

@media screen and (max-width: 1366px) {
	html {
		font-size: 7px;
	}
}

@media screen and (max-width: 1413px) {
	
}

@media screen and (max-width: 1024px) {
	.about-me{
		margin-top: 5rem;
	}
	.about-me-grid{
		display: grid;
		grid-template-columns: auto;
		height: auto;
		text-align: center;
	}
	
	#about-me-grid1{
		width: auto;
	}

	.about-me-titles h1{
		padding-left: 15px;
	}

	.about-me-titles h2{
		padding-left: 8px;
	}

	#about-me-grid2{
		width: 60%;
		margin: auto;
	}

	.home-image{
		width: 50%;
	}

	.project-container>div {
		flex-wrap: wrap;
		justify-content: center;
	}

	.contact-grid{
		display: grid;
		grid-template-columns: auto;
		justify-content: space-around;
		padding-left: 0;
		height: auto;
	}

	.contact-information{
		text-align: center;
	}

	.contact-information .contact-buttons {
		margin: auto;
		text-align: center;
		width: 35%;
	}

	.form{
		text-align: center;	
	}

	form{
		margin: auto;
	}
}

@media screen and (max-width: 800px) {
	.about-me{
		margin-left: 5rem;
		margin-right: 5rem;
	}

	.buttons{
		display: block;
	}

	.project-container > div{
		margin: 10rem 5rem;
	}

	.project-container > div > div >img{
		margin: 0 0 2rem 0;
	}
}

@media screen and (max-width: 526px) {
	header{
		display: none;
	}

	.about-me-titles h1{
		font-size: 7rem;
	}

	.about-me-titles h2{
		font-size: 3rem;
	}

	.project-container > div{
		margin: 5rem 2.5rem;
	}

}

@media screen and (max-width: 439px) {
	.button-grid div{
		margin: 0 0.5rem;
	}
}


@media screen and (max-width: 400px) {
	.button-grid {
		display: flex;
		margin: auto;
		text-align: center;
		justify-content: center;
		margin-bottom: 2.5rem;
		align-items: center;
	}


	.button-grid>div {
		width: 100%;
	}

	form{
		margin-top: 5rem;
	}

	input[type="text"],
	input[type="email"],
	textarea {
		display: block;
		width: 90%;
		margin: auto;
		padding: 1rem 1rem;
		margin-bottom: 2rem;
		margin-top: 0.5rem;
		font-size: 1.6rem;
		border-radius: 4px;
		border: 1px solid #ccc;
		font-family: 'Montserrat', sans-serif;
		resize: none;
	}

	button[type="submit"] {
		margin: auto;
	}
}

